[project]
name = "hbctool"
dependencies = []
requires-python = ">=3.6"
description = "A command-line interface for disassembling and assembling the Hermes Bytecode."
authors = [
    {name = "bongtrop"},
    {name = "ErbaZZ"},
    {name = "Sighery"},
]
maintainers = [
    {name = "Sighery"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "HBC", "Hermes", "bytecode", "React", "React Native",
    "Reverse Engineering", "hacking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Cybersecurity :: Reverse Engineering",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Sighery/hbctool"
Documentation = "https://github.com/Sighery/hbctool"
Repository = "https://github.com/Sighery/hbctool"

[project.scripts]
hbctool = "hbctool.__main__:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hbctool"]

[tool.setuptools.dynamic]
version = {attr = "hbctool.__version__"}
